--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIFF Starter</title>
+    <title>Test Send Button</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
