--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
     <div class="buttongroup">
         <div class="buttonrow">
-            <button id="sendmessagecarousel">Open Window</button>
+            <button id="openwindowbutton">Open Window</button>
+            <button id="sendmessagecarousel">SendCarousel</button>
             <button id="closewindowbutton">Close Window</button>
         </div>
         <div class="buttonrow">
