--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test 27</title>
+    <title>Test 28</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -11,7 +11,8 @@
             <button id="sendmessagebutton">Send Message</button>
         </div>
     </div>
-    <form><input type='text' value='Test Input Form'></form>
+    <input type="text" id='stkid' value='input sticker ID'>
+    <button id="sendsticker">Send Sticker</button>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
 </body>
