--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <input type="text" id='stkid' value='input sticker ID'>
     <button id="sendsticker">Send Sticker</button>
-    <input type="text" id='param'>
+    <div id='param'></div>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
 </body>
