--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test 31</title>
+    <title>Test 32</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,7 +13,7 @@
     </div>
     <input type="text" id='stkid' value='input sticker ID'>
     <button id="sendsticker">Send Sticker</button>
-    <input type="text" id='param'>
+    <img id='imgstk'>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
 </body>
