--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <input type="text" id='stkid' value='input sticker ID'>
     <button id="sendsticker">Send Sticker</button>
     <input type="text" id='inputsrc'><br>
-    <img id='imgstk'>
+    <input type="text" id='test'><br>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
 </body>
