--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test 33</title>
+    <title>Test 35</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,7 +14,7 @@
     <input type="text" id='stkid' value='input sticker ID'>
     <button id="sendsticker">Send Sticker</button>
     <input type="text" id='inputsrc'><br>
-    <input type="text" id='test'><br>
+    <label id='test'><br>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
 </body>
