--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <input type="text" id='stkid' value='input sticker ID'>
     <button id="sendsticker">Send Sticker</button>
     <input type="text" id='inputsrc'><br>
-    <label id='test'><br><br><br><br>
+    <label id='test'><br>
     <label id='test2'><br>
+    <label id='test3'><br>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
 </body>
