--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 </head>
 
 <body>
-    <center><img id='main'></center><br>
-    <a id='send1'><img id='1'></a><img id='2'><img id='3'><br>
-    <img id='4'><img id='5'><img id='6'><br>
-    <img id='7'><img id='8'><img id='9'><br>
-    <img id='10'><img id='11'><img id='12'><br>
+    <center><img id='main'><br>
+    <label id='label'></center>
+    <hr><hr>
+    <center><a id='send1'><img id='1'></a><a id='send2'><img id='2'></a><a id='send3'><img id='3'></a><br>
+    <a id='send4'><img id='4'></a><a id='send5'><img id='5'></a><a id='send6'><img id='6'></a><br>
+    <a id='send7'><img id='7'></a><a id='send8'><img id='8'></a><a id='send9'><img id='9'></a><br>
+    <a id='send10'><img id='10'></a><a id='send11'><img id='11'></a><a id='send12'><img id='12'></a></center><br>
         
     <div class="buttongroup">
         <div class="buttonrow">
