--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test 40</title>
+    <title>HW Send Sticker</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body background="bg.jpg">
     <center><img id='main'><br>
-    <label id='label'></center>
-    <hr><hr>
+    <label id='label'>
+    <hr><label id='titlee'></label><hr>Klik Pada Gambar di Bawah untuk Mengirim Stiker<hr></center>
     <center><a id='send1'><img id='1'></a><a id='send2'><img id='2'></a><a id='send3'><img id='3'></a><br>
     <a id='send4'><img id='4'></a><a id='send5'><img id='5'></a><a id='send6'><img id='6'></a><br>
     <a id='send7'><img id='7'></a><a id='send8'><img id='8'></a><a id='send9'><img id='9'></a><br>
     <a id='send10'><img id='10'></a><a id='send11'><img id='11'></a><a id='send12'><img id='12'></a></center><br>
-        
+    <hr><hr>   
     <div class="buttongroup">
         <div class="buttonrow">
             <button id="closewindowbutton">CLOSE LIFF</button>
