--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <center><img id='main'><br>
     <label id='label'>
-    <hr><label id='titlee'></label><hr>Klik Pada Gambar di Bawah untuk Mengirim Stiker<hr></center>
+    <hr><label id='titlee'><hr>Klik Pada Gambar di Bawah untuk Mengirim Stiker<hr></center>
     <center><a id='send1'><img id='1'></a><a id='send2'><img id='2'></a><a id='send3'><img id='3'></a><br>
     <a id='send4'><img id='4'></a><a id='send5'><img id='5'></a><a id='send6'><img id='6'></a><br>
     <a id='send7'><img id='7'></a><a id='send8'><img id='8'></a><a id='send9'><img id='9'></a><br>
