--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <center><img id='main'><br>
-        <label id='titlee'></label>
+        <label id='userid'></label>
         <hr><label>Klik Pada Gambar di Bawah untuk Mengirim Stiker</label><hr><hr></center>
     <center><a id='send1'><img id='1'></a><a id='send2'><img id='2'></a><a id='send3'><img id='3'></a><br>
     <a id='send4'><img id='4'></a><a id='send5'><img id='5'></a><a id='send6'><img id='6'></a><br>
