--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a id='send4'><img id='4'></a><a id='send5'><img id='5'></a><a id='send6'><img id='6'></a><br>
     <a id='send7'><img id='7'></a><a id='send8'><img id='8'></a><a id='send9'><img id='9'></a><br>
     <a id='send10'><img id='10'></a><a id='send11'><img id='11'></a><a id='send12'><img id='12'></a></center><br>
-    <hr><hr>   
+    <hr><input type='text' id='loop'><hr>   
         <div id='footer'><center><button id="closewindowbutton">CLOSE LIFF</button></center></div>
         
         
