--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
 <body>
     <center><img id='main'><br><hr>
         <label id='userid'></label>
-        <hr><label>Klik Pada Gambar di Bawah untuk Mengirim Stiker</label><hr><hr></center>
-    <center><a id='send1'><img id='1'></a><a id='send2'><img id='2'></a><a id='send3'><img id='3'></a><br>
-    <a id='send4'><img id='4'></a><a id='send5'><img id='5'></a><a id='send6'><img id='6'></a><br>
-    <a id='send7'><img id='7'></a><a id='send8'><img id='8'></a><a id='send9'><img id='9'></a><br>
-    <a id='send10'><img id='10'></a><a id='send11'><img id='11'></a><a id='send12'><img id='12'></a></center><br>
-    <hr><input type='text' id='loop'><hr>   
+        <hr><label>Klik Pada Gambar di Bawah untuk Mengirim Stiker</label><hr></center><hr>   
         <div id='footer'><center><button id="closewindowbutton">CLOSE LIFF</button></center></div>
         
         
