--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 </head>
 
 <body>
-    <center><img id='main'><br><hr>
+    <center><img heigh=80 width=80 id='main'><br><hr>
         <label id='userid'></label>
         <hr><label id='desk'></label><hr></center><hr>
-        <img heigh=320 width=320 id='home'>
+        <img heigh=480 width=480 id='home'>
         <p id='footer'><center><button id="close">CLOSE</button></center></p>
         
         
