--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <center><img heigh=80 width=80 id='main'><br><hr>
         <label id='userid'></label>
         <hr><label id='desk'></label><hr></center><hr>
-        <img width=50% id='home'>
+        <img max-width=80% id='home'>
         <p id='footer'><center><button id="close">CLOSE</button></center></p>
         
         
