--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
     <center><img heigh=80 width=80 id='main'><br><hr>
         <label id='userid'></label>
-        <hr><label id='desk'></label><hr></center><hr>
-        <img max-width=80% id='home'>
+        <hr><label id='desk'></label><hr><hr>
+        <img class='responsive' id='home'></center>
         <p id='footer'><center><button id="close">CLOSE</button></center></p>
         
         
