--- a/index.html
+++ b/index.html
@@ -7,7 +7,33 @@
 <body>
     <center><img class='imag' id='main'><br><hr>
         <label id='userid'></label>
-        <hr><label id='desk'></label><hr><hr>
+        <hr><label id='desk'></label><hr>
+        <div class="md-modal md-effect-1" id="modal-1">
+			<div class="md-content">
+				<h3>Usage</h3>
+				<div>
+					<p>Gunakan Parameter type, pkgid, stkid untuk Send Sticker<br>
+                    contoh : ?type=anim&pkgid=2&stkid=144,145,146,147
+                    </p>
+
+					<button class="md-close" id="md-close">Close me!</button>
+				</div>
+			</div>
+		</div>
+		
+        <div class="container">
+			<!-- Top Navigation -->
+			<div class="main clearfix">
+				<div class="column">
+
+				</div>
+				<div class="column">
+					<button class="md-trigger" id="md-trigger">Fade in &amp; Scale</button>
+				</div>
+			</div>
+		</div><!-- /container -->
+		<div class="md-overlay"></div><!-- the overlay element -->
+        <hr>
         <img class='responsive' id='home'></center>
         <div class='layang'><center><button id="close">CLOSE</button></center></div>
         
