--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <center><img class='imag' id='main'><br><hr>
+    <center><img width=80px heigh=80px id='main'><br><hr>
         <label id='userid'></label>
         <hr><label id='desk'></label><hr>
         <img class='responsive' id='home'></center>
