--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
 </head>
 
 <body>
-    <center><img width=80px height=80px id='main'><br><hr>
-        <label id='userid'></label>
+    <center><hr><img width=80px height=80px id='main'><br><hr>
+        <label id='userid'></label><hr>
+        <button class="trigger">Click here to trigger the modal!</button>
+        <div class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h1>HelloWorld</h1>
+        </div>
+        </div>
         <hr><label id='desk'></label><hr>
         <img class='responsive' id='home'></center>
         <div class='layang'><center><button id="close">CLOSE</button></center></div>
