--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <center><hr><img width=80px height=80px id='main'><br><hr>
         <label id='userid'></label><hr>
-        <button class="trigger">Click here to trigger the modal!</button>
+        <button class="trigger">Click 1</button>
         <div class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
