--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <center><hr><img width=80px height=80px id='main'><br><hr>
         <label id='userid'></label><hr>
-        <button class="trigger">Click 2</button>
+        <button class="trigger">Click 3</button>
         <div class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
@@ -22,4 +22,23 @@
         
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
+    <script>
+    var modal = document.querySelector(".modal");
+    var trigger = document.querySelector(".trigger");
+    var closeButton = document.querySelector(".close-button");
+
+    function toggleModal() {
+        modal.classList.toggle("show-modal");
+    }
+
+    function windowOnClick(event) {
+        if (event.target === modal) {
+            toggleModal();
+        }
+    }
+
+    trigger.addEventListener("click", toggleModal);
+    closeButton.addEventListener("click", toggleModal);
+    window.addEventListener("click", windowOnClick);
+        </script>
 </body>
