--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <body>
     <center><hr><img width=80px height=80px id='main'><br><hr>
         <label id='userid'></label><hr>
-        <button class="trigger">Click 3</button>
         <div class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
@@ -37,7 +36,7 @@
         }
     }
 
-    trigger.addEventListener("click", toggleModal);
+    toggleModal();
     closeButton.addEventListener("click", toggleModal);
     window.addEventListener("click", windowOnClick);
         </script>
