--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 
 <body>
     <center><hr><img width=80px height=80px id='main'><br><hr>
-        <label id='userid'></label><hr>
         <div class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
-            <h1>Hello World</h1>
+            <label id='userid'></label><hr>
+            <label>STKID</label><input id='stkid' type='text'>
+            <input id='kirim' type='submit' value='Submit'>
         </div>
         </div>
         <hr><label id='desk'></label><hr>
