--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
         <div class="modal-content">
             <span class="close-button">&times;</span>
             <label id='userid'></label><hr>
-            <label>STKID</label><input id='stkid' type='text'>
-            <input id='kirim' type='submit' value='Submit'>
-        </div>
+            <label id='fdata'></label><br>
+            </div>
         </div>
         <hr><label id='desk'></label><hr>
         <img class='responsive' id='home'></center>
