--- a/index.html
+++ b/index.html
@@ -23,11 +23,19 @@ var url = "data.json";
 xmlhttp.onreadystatechange = function() {
     if (this.readyState == 4 && this.status == 200) {
         var myArr = JSON.parse(this.responseText);
-        document.getElementById("fdata").innerHTML = myArr.stickers;
+        myFunction(myArr.stickers);
     }
 };
 xmlhttp.open("GET", url, true);
 xmlhttp.send();
+function myFunction(arr) {
+    var out = "";
+    var i;
+    for(i = 0; i < arr.length; i++) {
+        out += arr[i].id;
+    }
+    document.getElementById("fdata").innerHTML = out;
+}
 </script>
 
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
