--- a/index.html
+++ b/index.html
@@ -19,5 +19,24 @@
         
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
-    
+    <script>      
+    var url = "data.json";
+    xmlhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+        var myArr = JSON.parse(this.responseText);
+        myFunction(myArr.stickers);
+    }
+    };
+    xmlhttp.open("GET", url, true);
+    xmlhttp.send();
+
+function myFunction(arr) {
+    var out = "";
+    var i;
+    for(i = 0; i < arr.length; i++) {
+        out += ','+arr[i].id;
+    }
+    document.getElementById("fdata").innerHTML = out;
+}
+</script>
 </body>
