--- a/index.html
+++ b/index.html
@@ -15,28 +15,24 @@
         <hr><label id='desk'></label><hr>
         <img class='responsive' id='home'></center>
         <div class='layang'><center><button id="close">CLOSE</button></center></div>
-<label id='fdata'></label><br>        
+        <label id='fdata'></label><br>        
         
-    <script>      
-    var url = "data.json";
-    xmlhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-        var myArr = JSON.parse(this.responseText);
-        myFunction(myArr.stickers);
-    }
+    <script>
+    <script type="application/javascript">
+    var request = new XMLHttpRequest();
+    request.open('GET', '/data.json', true);
+    // this following line is needed to tell the server this is a ajax request
+    request.setRequestHeader("X-Requested-With", "XMLHttpRequest");
+    request.onload = function () {
+    if (this.status >= 200 && this.status < 400) {
+            var json = JSON.parse(this.response);
+            document.getElementById("fdata").innerHTML = json;
+            // this is where you can do something with the json response
+        }
     };
-    xmlhttp.open("GET", url, true);
-    xmlhttp.send();
-
-function myFunction(arr) {
-    var out = "";
-    var i;
-    for(i = 0; i < arr.length; i++) {
-        out += ','+arr[i].id;
-    }
-    document.getElementById("fdata").innerHTML = out;
-}
-</script>
+    request.send();
+    });
+    </script>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
 </body>
