--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         document.getElementById("fdata").innerHTML = myObj.stickers[0].id;
         }
     };
-    xmlhttp.open("GET", "data.json", true);
+    xmlhttp.open("GET", "data.meta", true);
     xmlhttp.send();
     </script>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
