--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sticker Sender</title>
     <link rel="stylesheet" href="style.css">
+    <script src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.js" ></script>
 </head>
 
 <body>
@@ -19,15 +20,16 @@
     <label id='fdata'></label><br>
     
     <script>
-    var xmlhttp = new XMLHttpRequest();
-    xmlhttp.onreadystatechange = function() {
-    if (this.readyState == 4 && this.status == 200) {
-        var myObj = JSON.parse(this.responseText);
-        document.getElementById("fdata").innerHTML = myObj.stickers[0].id;
-        }
-    };
-    xmlhttp.open("GET", "data.meta", true);
-    xmlhttp.send();
+    $.get("www.google.com", function(response) { alert(response) });
+    //var xmlhttp = new XMLHttpRequest();
+    //xmlhttp.onreadystatechange = function() {
+    //if (this.readyState == 4 && this.status == 200) {
+    //    var myObj = JSON.parse(this.responseText);
+    //    document.getElementById("fdata").innerHTML = myObj.stickers[0].id;
+    //    }
+    //};
+    //xmlhttp.open("GET", "data.meta", true);
+    //xmlhttp.send();
     </script>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
