--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <hr><label id='desk'></label><hr>
         <img class='responsive' id='home'></center>
         <div class='layang'><center><button id="close">CLOSE</button></center></div>
-    7    
+    8    
     <input type='text' id='fdata'><br>
     
     <script>
@@ -34,7 +34,7 @@
         document.getElementById("fdata").value = data;
         }
     };
-    xmlhttp.open("GET", "data.meta", true);
+    xmlhttp.open("GET", "http://dl.stickershop.line.naver.jp/products/0/0/1/7396/android/productInfo.meta", true);
     xmlhttp.send();
     </script>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
