--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <div class="modal-content">
             <span class="close-button">&times;</span>
             <label id='userid'></label><hr>
+            <label id='fdata'></label><br>
             </div>
         </div>
         <hr><label id='desk'></label><hr>
         <img class='responsive' id='home'></center>
-        <div class='layang'><center><button id="close">CLOSE</button></center></div>
-    8    
-    <input type='text' id='fdata'><br>
+        <div class='layang'><center><button id="close">CLOSE</button></center></div>   
+ 
     
     <script>
     //$.get("www.google.com", function(response) { alert(response) });
