--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sticker Sender</title>
+    <title>Sticker Senderr</title>
     <link rel="stylesheet" href="style.css">
     </head>
 
