--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <div class='layang'><center><button id="close">CLOSE</button></center></div>   
  
     
-    <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
+    <script src='https://d.line-scdn.net/n/_8/liff-bridge-js/js/liff.js'></script>
     <script src="liff-starter.js"></script>
 </body>
